<resources>
    <string name="app_name">ImageTextAdder</string>
    <string name="raheem">Raheem</string>

    <!-- Image -->
    <string name="hint_title">Title goes here</string>
    <string name="hint_subtitle">And subtitle goes here</string>
    <string name="image_details">Details</string>
    <string name="your_kb">%1$d kb</string>
    <string name="your_dimension">%1$s x %2$s</string>
    <string name="save_copy">Save copy</string>
    <string name="save">Save</string>
    <string name="save_as">Save as …</string>
    <string name="permission_fail">You need to grant permission in order to execute this action!</string>
    <string name="images_changed">Images changed!</string>
</resources>